--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
 
       
-      <div class="slide active">
+      <div class="slide">
         <div class="imagen-con-titulo">
           <img src="img/page1.jpg" alt="Página 1">
           <div class="titulo">PERFUMES DE DISEÑADOR</div>
